merge -r1045:1320 https://svn.forge.cnaf.infn.it/svn/voms/voms/branches/voms-1-9-series
git-svn-id: https://svn.forge.cnaf.infn.it/svn/voms/voms/trunk@1339 5daf30ca-8a0d-0410-8b79-804c1d55056c